--- a/Locato.Web/appsettings.json
+++ b/Locato.Web/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Locato": "Host=localhost;Port=5432;Database=ufony-local3;Username=postgres;Password=2455"
+  },
+  "Args": {
+    "EnableApi": true,
+    "EnableWorker": false,
+    "CreateDb": false,
+    "SeedDb": false,
+    "DeleteDb": false
   }
 }
