--- a/Locato.Infrastructure/Locato.Infrastructure.csproj
+++ b/Locato.Infrastructure/Locato.Infrastructure.csproj
@@ -8,7 +8,18 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="Services\" />
     <Folder Include="Utils\" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+    <PackageReference Include="System.Security.Claims" Version="4.3.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Locato.Data\Locato.Data.csproj" />
   </ItemGroup>
 
 </Project>
