--- a/Locato.API/appsettings.json
+++ b/Locato.API/appsettings.json
@@ -18,7 +18,7 @@
     "EnableApi": true,
     "EnableWorker": false,
     "CreateDb": true,
-    "SeedDb": true,
-    "DeleteDb": true
+    "SeedDb": false,
+    "DeleteDb": false
   }
 }
