--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -12,4 +12,8 @@
     <None Remove="Interfaces\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+  </ItemGroup>
+
 </Project>
