--- a/Locato.API/appsettings.json
+++ b/Locato.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Locato": "Host=localhost;Port=5432;Database=ufony-local3;Username=postgres;Password=2455"
+    "Locato": "Host=localhost;Port=5432;Database=ufony-local3;Username=postgres;Password=2455;Include Error Detail=true"
   },
 
   "AppSettings": {
@@ -18,7 +18,7 @@
     "EnableApi": true,
     "EnableWorker": false,
     "CreateDb": true,
-    "SeedDb": false,
-    "DeleteDb": false
+    "SeedDb": true,
+    "DeleteDb": true
   }
 }
